// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastMessage rendering does not render close button if type is fatal 1`] = `
<div
  className="ToastMessage ToastMessage--fatal"
  data-testid="toast-fatal"
  id="toast-0"
  role="alert"
>
  <ErrorFilled
    className="ToastMessage__icon"
    size={20}
  />
  <div
    className="ToastMessage__text"
    data-testid="message"
  >
    This is a test
  </div>
</div>
`;

exports[`ToastMessage rendering renders close button if type is error 1`] = `
<div
  className="ToastMessage ToastMessage--error"
  data-testid="toast-error"
  id="toast-0"
  role="alert"
>
  <ErrorFilled
    className="ToastMessage__icon"
    size={20}
  />
  <div
    className="ToastMessage__text"
    data-testid="message"
  >
    This is a test
  </div>
  <button
    aria-label="Dismiss"
    className="ToastMessage__close"
    data-testid="toast-close"
    onClick={[Function]}
    type="button"
  >
    <Close
      size={20}
    />
  </button>
  <div
    className="ToastMessage__time"
    data-chromatic="ignore"
  />
</div>
`;
